--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 
-let attempts=0;
+let attempts=1;
 
 
 let high,low,username=window.prompt(`Tafadhari,Weka jina lako: `)
@@ -80,28 +80,28 @@ else if(gnum>high){
 PLEASE! inter the number between ${low} and ${high}: `)
 }
 else if(isNaN(gnum)){
-     window.alert(`You have not intered the NUMBER!
-${username},PLEASE! inter the valid number.`)
+     window.alert(`HAUJAWEKA NAMBA YOUOTE!
+${username},TAFADHARI!WEKA NAMBA YOYOTE.`)
 }
 else{
 
 if(gnum>randomnum)
      {
      attempts++;
-window.alert(`TOO HIGH ${username}
-     Please try again.`)
+window.alert(`NAMBA ULIYOWEKA NI KUBWA SANA ${username}
+     JARIBU TENA.`)
 }
      else if(gnum<randomnum){
           attempts++;
-          window.alert(`TOO LOW ${username}
-     Please try again.`)
+          window.alert(`NAMBA ULIYOWEKA NI NDOGO SANA ${username}
+     TAFADHARI JARIBU TENA:`)
      }
      else{
-          window.alert(`CONGLATULATION!${username},
-     The correct number was ${randomnum};and it took you ${attempts} attempts to gues correct number.`)
+          window.alert(HONGERA SANA ${username},
+     NAMBA SAHIHI ILIKUA NI ${randomnum};NA IMEKUCHUKUA AWAMU ${attempts} KUBASHIRI NAMBA SAHIHI.`)
           window.alert(`*******GAME OVER******************
-                         -thank you for your time-
-                          --sisco created--`)
+                         -ASANTE KWA MUDA WAKO😊-
+                          --imetengenezwa na Sisco--`)
      choise=false;
           }
 
