--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 
-let attempts=1;
+let attempts=0;
 
 
 let high,low,username=window.prompt(`Tafadhari,Weka jina lako: `)
@@ -87,7 +87,7 @@ else{
 
 if(gnum>randomnum)
      {
-     attempts++;
+     ++attempts;
 window.alert(`NAMBA ULIYOWEKA NI KUBWA SANA ${username}
      JARIBU TENA.`)
 }
