--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ let attempts=1;
 
 
 
-let high,low,username=window.prompt(`TAFADHARI WEKA JINA LAKO ILIKIENDELEA: `)
+let high,low,username=window.prompt(`TAFADHARI WEKA JINA LAKO ILI KUENDELEA: `)
 
 
 
